--- a/opencv_test.vcxproj.filters
+++ b/opencv_test.vcxproj.filters
@@ -26,9 +26,24 @@
     <Image Include="..\moment1.jpg">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="home.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="board.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="contrast.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="canny.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="edge_points.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="methods.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
